feat: Insert the new correction of the code in the landing

--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/ad07fec59d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="Styles.css">
-    <title>RemodelKing</title>
+    <title>ModelHouse</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <div class="head">
             <div class="container">
                 <div class="img">
-                    <img src="img/logo.png" alt="" />
+                    <img src="img/logo.jpg" alt="" />
                 </div>
                 <div class="titles">
                     <ul>
@@ -30,7 +30,7 @@
                             <li class="cambio">About us</li>
                         </a>
                         <a href="#steps">
-                            <li class="cambio">How does this work?</li>
+                            <li class="cambio">Video on team</li>
                         </a>
                         <a href="#services">
                             <li class="cambio">Services</li>
@@ -38,7 +38,6 @@
                         <a href="#aplication">
                             <li class="cambio">Aplication</li>
                         </a>
-                        <li><i class="fa-regular fa-moon moon"></i></li>
                         <li><i class="fa-solid fa-bars menu"></i></li>
                     </ul>
                 </div>
@@ -54,7 +53,7 @@
                         <li class="move_up">About us</li>
                     </a>
                     <a href="#steps">
-                        <li class="move_up">How does this work?</li>
+                        <li class="move_up">Video On The Team</li>
                     </a>
                     <a href="#services">
                         <li class="move_up">Services</li>
@@ -67,12 +66,12 @@
         </div>
         <div class="img-head" id="img-head">
             <div class="container">
-                <h1>Hello!, We are FolkWeb</h1>
+                <h1>Hello!, We are ModelHouse</h1>
                 <p>
                     Would you like to seek or provide your services in real estate remodeling?
                 </p>
                 <p>Come and live this incredible experience!</p>
-                <button>RemodelKing</button>
+                <button>Download</button>
             </div>
         </div>
     </header>
@@ -90,7 +89,7 @@
                     </div>
                     <div class="characteristics">
                         <p>
-                            All remodeling companies are going to be constantly evaluated in each of their projects that
+                            All ModelHouse companies are going to be constantly evaluated in each of their projects that
                             they obtain.
                         </p>
                         <i class="fa-solid fa-key"></i>
@@ -98,7 +97,7 @@
                     <div class="characteristics">
                         <i class="fa-solid fa-chart-line"></i>
                         <p>
-                            We have trusted remodeling companies front and center on the web app.
+                            We have trusted remodeling companies for how best they perform in their area.
                         </p>
                     </div>
                 </div>
@@ -106,7 +105,7 @@
                     <img src="img/Import-img.jpg" alt="" />
                 </div>
             </div>
-        </section>
+        </section>    
         <section class="about" id="about">
             <h1>About Us</h1>
             <p class="description">
@@ -134,33 +133,17 @@
             </div>
         </section>
         <section class="steps" id="steps">
-            <h1>How does this worl?</h1>
+            <h1>Video on team</h1>
             <div class="container">
                 <div class="step step_1">
-                    <img src="img/step_1.png" alt="">
-                    <div class="inform_step">
-                        <p>Create an account</p>
-                        <h3>Start section as a client or company</h3>
-                        <h5>You can create an account with your email and password and select whether you are a customer
-                            or a company when creating an account</h5>
-                    </div>
+                    <iframe height="394" src="https://www.youtube-nocookie.com/embed/dup9JxANfFw" title="About the prodcut (Model Virtual)" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <h2>About the product</h2>
                 </div>
                 <div class="step step_2">
-                    <img src="img/step_2.jpg" alt="">
-                    <div class="inform_step">
-                        <p>Search removal company</p>
-                        <h3>View real estate remodeling companies</h3>
-                        <h5>You can choose the remodeling company to your preference with the visualization of projects,
-                            styles and comments</h5>
-                    </div>
-                </div>
-                <div class="step step_3">
-                    <div class="inform_step">
-                        <p>Establish communications</p>
-                        <h3>Contact the chosen remodeling company</h3>
-                        <h5>You can establish communications with the help of a chat box on the page.</h5>
-                    </div>
-                    <img src="img/step_3.png" alt="">
+                    <iframe height="394" src="https://www.youtube-nocookie.com/embed/dup9JxANfFw" title="About the prodcut (Model Virtual)" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <h2>About the team</h2>
                 </div>
             </div>
         </section>
@@ -193,14 +176,14 @@
                 <h1>Aplication</h1>
                 <p>Available to the general public.</p>
                 <p>Enjoy this experience through the link:</p>
-                <p>www.RemodelKing.com</p>
-                <button>RemodelKing</button>
+                <p>www.ModelHouse.com</p>
+                <button>ModelHouse</button>
             </div>
         </section>
     </main>
     <footer id="footer">
         <div class="container">
-            <img src="img/logo.png" alt="">
+            <img src="img/Logo.jpg" alt="">
             <div class="social_media">
                 <i class="fa-brands fa-facebook-f"></i>
                 <i class="fa-brands fa-instagram"></i>
