--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div class="img-import">
-                    <img src="img/Import-img.jpg" alt="" />
+                    <img src="../img/Import-img.jpg" alt="" />
                 </div>
             </div>
         </section>    
