--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="head">
             <div class="container">
                 <div class="img">
-                    <img src="img/logo.jpg" alt="" />
+                    <img src="../img/logo.jpg" alt="" />
                 </div>
                 <div class="titles">
                     <ul>
@@ -183,7 +183,7 @@
     </main>
     <footer id="footer">
         <div class="container">
-            <img src="img/Logo.jpg" alt="">
+            <img src="../img/Logo.jpg" alt="">
             <div class="social_media">
                 <i class="fa-brands fa-facebook-f"></i>
                 <i class="fa-brands fa-instagram"></i>
