--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
         <div class="head">
             <div class="container">
                 <div class="img">
-                    <img src="img/logo.jpg" alt="" />
+                    <img src="img/Logo.jpg" alt="" />
                 </div>
                 <div class="titles">
                     <ul>
