--- a/Index.html
+++ b/Index.html
@@ -136,12 +136,12 @@
             <h1>Video on team</h1>
             <div class="container">
                 <div class="step step_1">
-                    <iframe height="394" src="https://www.youtube-nocookie.com/embed/dup9JxANfFw" title="About the prodcut (Model Virtual)" 
+                    <iframe height="394" src="https://www.youtube-nocookie.com/embed/7eHbBXl7A-k" title="About the prodcut (Model Virtual)" 
                     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <h2>About the product</h2>
                 </div>
                 <div class="step step_2">
-                    <iframe height="394" src="https://www.youtube-nocookie.com/embed/dup9JxANfFw" title="About the prodcut (Model Virtual)" 
+                    <iframe height="394" src="https://www.youtube-nocookie.com/embed/JsZX2ZY6nxw" title="About the prodcut (Model Virtual)" 
                     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <h2>About the team</h2>
                 </div>
